# d2rlauncher

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: DEVELOPMENT.md  RELEASE.md
scripts/: release.sh
src/: app.rs  config.rs  constants.rs  domain.rs  error.rs  launcher.rs  logger.rs  main.rs  ping.rs
