[package]
name = "d2rlauncher"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
description = "Cross-platform launcher for Diablo II: Resurrected"
license = "MIT"

[dependencies]
fltk = { version = "1", features = ["fltk-bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
surge-ping = "0.8"
tokio = { version = "1", features = ["rt", "net", "time"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"
